style: fix spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,7 +76,7 @@ div.about .imgWrapper {
 
 div.stuff {
   position: relative;
-  padding: 3rem 0;
+  padding: 6rem 0;
   margin: 6rem 0;
   text-align: center;
   /*background: var(--accent);*/
